--- a/index.html
+++ b/index.html
@@ -3,31 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./assets/css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
 
-  Perfume
+  <div class="wrapper">
+<img src="./assets/images/image-product-mobile.jpg" alt="A image of a perfume bottle">
+  <div class="content">
+<h2>Perfume</h2>
 
-  Gabrielle Essence Eau De Parfum
+  <h1>Gabrielle Essence Eau De Parfum</h1>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <p class="info">
+    A floral, solar and voluptuous interpretation composed by Olivier Polge,
+    Perfumer-Creator for the House of CHANEL.
+  </p>
 
-  $149.99
-  $169.99
+  <div class="prices">
+    <p>$149.99</p>
+    <p>$169.99</p>
+  </div>
 
-  Add to Cart
-  
+<button class="button">    
+  <img src="./assets/images/icon-cart.svg" alt="">
+  <p>Add to Cart</p>
+</button>
+</div>
+</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
