--- a/index.html
+++ b/index.html
@@ -24,21 +24,25 @@
     Perfumer-Creator for the House of CHANEL.
   </p>
 
-  <div class="prices">
-    <p>$149.99</p>
-    <p>$169.99</p>
+  <div class="prices prices-container">
+    <h1 class="sale-price">$149.99</h1>
+    <p class="normal-price">$169.99</p>
   </div>
 
+  <div class="button-container">
 <button class="button">    
   <img src="./assets/images/icon-cart.svg" alt="">
   <p>Add to Cart</p>
 </button>
 </div>
 </div>
+</div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Sedar Yildirim</a>.
+</div>
+
 </html>
