--- a/index.html
+++ b/index.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="./assets/css/styles.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
-
-  <div class="wrapper">
-<img src="./assets/images/image-product-mobile.jpg" alt="A image of a perfume bottle">
-  <div class="content">
-<h2>Perfume</h2>
-
-  <h1>Gabrielle Essence Eau De Parfum</h1>
-
-  <p class="info">
-    A floral, solar and voluptuous interpretation composed by Olivier Polge,
-    Perfumer-Creator for the House of CHANEL.
-  </p>
-
-  <div class="prices prices-container">
-    <h1 class="sale-price">$149.99</h1>
-    <p class="normal-price">$169.99</p>
-  </div>
-
-  <div class="button-container">
-<button class="button">    
-  <img src="./assets/images/icon-cart.svg" alt="">
-  <p>Add to Cart</p>
-</button>
-</div>
-</div>
-</div>
-
+    <main>
+        <article class="product-card">
+            <div class="product-image">
+                <img src="./assets/images/image-product-mobile.jpg" alt="Gabrielle Essence Eau De Parfum bottle" class="product-img">
+            </div>
+            <div class="product-details">
+                <p class="product-category">Perfume</p>
+                <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
+                <p class="product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+                <div class="product-pricing">
+                    <p class="current-price">$149.99</p>
+                    <p class="original-price">$169.99</p>
+                </div>
+                <button class="add-to-cart">
+                    <img src="./assets/images/icon-cart.svg" alt="" aria-hidden="true">
+                    Add to Cart
+                </button>
+            </div>
+        </article>
+    </main>
+    
+    <footer class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Sedar Yildirim</a>.
+    </footer>
 </body>
-
-<div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Sedar Yildirim</a>.
-</div>
-
 </html>
